Changes in Version 2.3-2

  o Added new interface exams2ilias() for the open-source ILIAS learning
    management system (https://www.ilias.de/). This is essentially a
    convenience wrapper to exams2qti12(), tweaking a few defaults and
    employing a somewhat modified XML template.


Changes in Version 2.3-1

  o Added new interface exams2openolat() for the open-source OpenOLAT learning
    management system (https://www.openolat.com/). This is only a convenience
    wrapper to exams2qti12() or exams2qti21() with some dedicated tweaks
    for optimizing MathJax output for OpenOLAT.

  o When using exams2html(..., mathjax = TRUE) for testing purposes,
    mathjax.rstudio.com is used now rather than cdn.mathjax.org which
    is currently redirecting and will eventually be shut down completely.

  o Bug fixes and improvements in HTML transformers:
    - Only ="file.ext" (with =") is replaced now by Base 64 version.
    - href="file.ext" is replaced by href="file.ext" download="file.ext"
      prior to Base 64 replacement.
    - alt="file.ext" and download="file.ext" are preserved without
      Base 64 encoding.

  o In exams2html() and other interfaces based on make_exercise_transform_html()
    base64 = TRUE now uses Base 64 encoding for all file extensions (known
    to the package) whereas base64 = NULL only encodes image files (previous
    default behavior).

  o After setting a random seed exams2nops() and exams2pdf() now yield the
    same random versions of the exercises. Previously, this was not the case
    because exams2nops() internally generates a single random trial exam first for
    a couple of sanity checks. Now, the .GlobalEnv$.Random.seed is restored
    after generating the trial exam.

  o Fixed the support for 'nsamp' argument in exams2nops(). Furthermore,
    current limitations of exams2nops() are pointed out more clearly and
    error messages and edge cases caught.

  o Include further file URIs for Base 64 supplements, in particular .sav